--- a/Resources/Public/Scss/Theme/global.scss
+++ b/Resources/Public/Scss/Theme/global.scss
@@ -2556,49 +2556,8 @@ textarea {
   width: 100%;
 }
 
-.tx-tool-pi2 h2:hover {
-  background: $primary;
-}
-
-.tx-tool-pi1 div.anmeldung a {
-  padding: 0 6px;
-}
-
-.tx-tool-pi1 div.anmeldung a {
-  background:$primary;
-  color: #fff;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.tx-tool-pi1 div.anmeldung a:hover {
-  background-color: #5f5f5f;
-  text-decoration:none;
-}
-
-.tx-tool-pi2 legend {
-  color:$primary;
-}
-
-/* Anmeldung */
-.tx-tool-pi2 h2.clickme::after {
-  content: url("../../Icons/pfeil_unten.svg")!important;
-  float: right;
-}
-
-/* Copy-Button */
-.tx-tool-pi2 .copyButton {
-  border-color: #c2c0be;
-  color: #c02727;
-  width: 100%;
-  @include media-breakpoint-up(lg) {
-    position: absolute;
-    left: 650px;
-    width: auto !important;
-  }
-}
-
-/* Anmeldung */
-.tx-tool-pi2 legend {
-  float: unset;
-}
+  //
+ // Import other extensions scss
+//
+@import "../Tool/tool_pi1";
+@import "../Tool/tool_pi2";
