--- a/Resources/Public/Scss/Theme/global.scss
+++ b/Resources/Public/Scss/Theme/global.scss
@@ -1,5 +1,4 @@
 @import "fonts";
-
 :root {
   --gallery-gap: 0;
 }
@@ -318,6 +317,9 @@ h3.carousel-item-header,
 }
 
 /* Galerie*/
+.gallery-item-size-1 {
+  width:100%;
+}
 
 .gallery-item-size-2 {
   padding: 5px;
@@ -485,7 +487,7 @@ h3.carousel-item-header,
 
 .news-single .news-img-wrap .outer {
   width: 100%;
-  margin: 0%;
+  margin: 0;
 }
 
 
@@ -569,7 +571,6 @@ h3.carousel-item-header,
 .frame-newslayout2 .row.news-list-item img,
 .frame-newslayout3 .row.news-list-item img {
   width: 100%;
-  width: 100% !important;
   margin: 0 auto;
   object-fit: cover;
   object-position: top center;
@@ -635,7 +636,6 @@ h3.carousel-item-header,
   text-transform: uppercase;
   box-shadow: none;
   @include media-breakpoint-up(lg) {
-    bottom: 20px;
     bottom: 40px;
   }
 }
@@ -766,7 +766,7 @@ h3.carousel-item-header,
 
 .glyphicon-calendar::before {
   background-repeat: no-repeat;
-  background-image: url("../../Icons/cal_date.svg");
+  background-image: url("../../../typo3conf/ext/sitepackage/Resources/Public/Icons/cal_date.svg");
   display: inline-block;
   background-size: cover;
   width: 20px;
@@ -777,7 +777,7 @@ h3.carousel-item-header,
 
 .glyphicon-time::before {
   background-repeat: no-repeat;
-  background-image: url("../../Icons/cal_time.svg");
+  background-image: url("../../../typo3conf/ext/sitepackage/Resources/Public/Icons/cal_time.svg");
   display: inline-block;
   background-size: cover;
   width: 20px;
@@ -787,11 +787,11 @@ h3.carousel-item-header,
 }
 
 .calendarize_single .glyphicon-calendar::before {
-  background-image: url("../../Icons/cal_date_white.svg");
+  background-image: url("../../../typo3conf/ext/sitepackage/Resources/Public/Icons/cal_date_white.svg");
 }
 
 .calendarize_single .glyphicon-time::before {
-  background-image: url("../../Icons/cal_time_white.svg");
+  background-image: url("../../../typo3conf/ext/sitepackage/Resources/Public/Icons/cal_time_white.svg");
 }
 
 /* Kalender Liste*/
@@ -844,12 +844,8 @@ h3.carousel-item-header,
   margin: 10px 0;
   background: #fff;
   @include media-breakpoint-up(lg) {
-    padding: 0 20px 20px 0;
-    width: 48%;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
-    border: 1px solid #eaeaea;
     width: 100%;
-    margin: 0;
     height: 355px;
     position: relative;
     border: 1px solid #eaeaea;
@@ -998,7 +994,6 @@ h3.carousel-item-header,
 
 .frame-kalenderkasten2 .calendarize-item img {
   width: 100%;
-  width: 100% !important;
   margin: 0 auto;
   object-fit: cover;
   object-position: top center;
@@ -1106,6 +1101,8 @@ h3.carousel-item-header,
   padding-top: 20px;
 }
 
+.f3-widget-paginator li {display: inline;}
+
 .f3-widget-paginator p {
   display: none;
 }
@@ -1128,8 +1125,6 @@ h3.carousel-item-header,
 }
 
 .f3-widget-paginator .current {
-  float: left;
-  padding: 8px 16px;
   text-decoration: none;
   background-color: $primary;
   color: white;
@@ -1286,14 +1281,8 @@ h3.carousel-item-header,
 /* Rahmen Zielseiten Section */
 .frame-zielseitensection ul {
   list-style-type: none;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(.05, #f9f9f9), color-stop(1, #e9e9e9));
-  background: -moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9', GradientType=0);
-  background-color: #f9f9f9;
+  background: rgb(249,249,249);
+  background: linear-gradient(0deg, rgba(217,217,217,1) 0%, rgba(249,249,249,1) 100%);
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 3px;
@@ -1407,7 +1396,6 @@ h3.carousel-item-header,
 
 .frame-layout-rollover_image .gallery-item img {
   opacity: 0.45;
-  -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
@@ -1415,7 +1403,6 @@ h3.carousel-item-header,
 
 .frame-layout-rollover_image figure img:hover {
   opacity: 1;
-  -webkit-transform: scale(1.3);
   transform: scale(1.3);
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
@@ -2001,7 +1988,6 @@ h3.carousel-item-header,
   bottom: 0;
   left: 0;
   animation: fadeInLeft 1s both;
-  animation-delay: 0s;
   animation-delay: 0.4s;
   background: $primary;
   opacity: 0.9 !important;
@@ -2075,7 +2061,6 @@ h3.carousel-item-header,
 
 .box .textpic.textpic-above .frame-backgroundimage-container {
   border: 0;
-  margin-top: 1.25rem;
   word-wrap: break-word;
   background-clip: border-box;
   position: relative;
@@ -2128,19 +2113,16 @@ h3.carousel-item-header,
 
 .box .frame-backgroundimage-container,
 .box .gallery-item img {
-  -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
 }
 
 .box:hover .frame-backgroundimage-container {
-  -webkit-transform: scale(1.3);
   transform: scale(1.3);
 }
 
 .box:hover .gallery-item img {
-  -webkit-transform: scale(1.3);
   transform: scale(1.3);
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
@@ -2276,12 +2258,12 @@ h3.carousel-item-header,
 }
 
 .box.start h5 {
-  margin-bottom: 0rem !important;
+  margin-bottom: 0 !important;
 }
 
 .box.start h5 a {
   display: block;
-  margin-bottom: 0rem !important;
+  margin-bottom: 0 !important;
 }
 
 /* Box Hintergrundbild */
@@ -2439,13 +2421,11 @@ fieldset {
 @-webkit-keyframes fadeInLeft {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2453,13 +2433,11 @@ fieldset {
 @keyframes fadeInLeft {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2473,13 +2451,11 @@ fieldset {
 @-webkit-keyframes fadeInRight {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2487,13 +2463,11 @@ fieldset {
 @keyframes fadeInRight {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2508,13 +2482,11 @@ fieldset {
 @-webkit-keyframes fadeInUp {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2522,13 +2494,11 @@ fieldset {
 @keyframes fadeInUp {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2568,13 +2538,11 @@ fieldset {
 @-webkit-keyframes fadeInDown {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2582,13 +2550,11 @@ fieldset {
 @-webkit-keyframes fadeInDown {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2596,13 +2562,11 @@ fieldset {
 @keyframes fadeInDown {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
 }
@@ -2626,34 +2590,28 @@ fieldset {
 
   0% {
     opacity: 0;
-    -webkit-transform: scale3d(0.3, 0.3, 0.3);
     transform: scale3d(0.3, 0.3, 0.3);
   }
 
   20% {
-    -webkit-transform: scale3d(1.1, 1.1, 1.1);
     transform: scale3d(1.1, 1.1, 1.1);
   }
 
   40% {
-    -webkit-transform: scale3d(0.9, 0.9, 0.9);
     transform: scale3d(0.9, 0.9, 0.9);
   }
 
   60% {
     opacity: 1;
-    -webkit-transform: scale3d(1.03, 1.03, 1.03);
     transform: scale3d(1.03, 1.03, 1.03);
   }
 
   80% {
-    -webkit-transform: scale3d(0.97, 0.97, 0.97);
     transform: scale3d(0.97, 0.97, 0.97);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
   }
 }
@@ -2671,34 +2629,28 @@ fieldset {
 
   0% {
     opacity: 0;
-    -webkit-transform: scale3d(0.3, 0.3, 0.3);
     transform: scale3d(0.3, 0.3, 0.3);
   }
 
   20% {
-    -webkit-transform: scale3d(1.1, 1.1, 1.1);
     transform: scale3d(1.1, 1.1, 1.1);
   }
 
   40% {
-    -webkit-transform: scale3d(0.9, 0.9, 0.9);
     transform: scale3d(0.9, 0.9, 0.9);
   }
 
   60% {
     opacity: 1;
-    -webkit-transform: scale3d(1.03, 1.03, 1.03);
     transform: scale3d(1.03, 1.03, 1.03);
   }
 
   80% {
-    -webkit-transform: scale3d(0.97, 0.97, 0.97);
     transform: scale3d(0.97, 0.97, 0.97);
   }
 
   to {
     opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
   }
 }
