--- a/Resources/Public/Scss/Tool/tool_pi1.scss
+++ b/Resources/Public/Scss/Tool/tool_pi1.scss
@@ -3,96 +3,48 @@
  @import "../../../../../../public/typo3conf/ext/bootstrap_package/Resources/Public/Contrib/bootstrap5/scss/bootstrap";
 */
 
-ul.typo3-messages {
-  padding-left: 0;
-}
+ul.typo3-messages { padding-left: 0; }
+ul.typo3-messages li { list-style:none; }
+h4.alert-title { font-family: unset; font-size: large; }
+img.fa-info-circle { width: 1em; height: 1em; }
+.tx-tool-pi1 div.row    { margin-right: 0; margin-left: 0; }
+.tx-tool-pi1 div.even   { background-color: #EEEEEE; }
+.tx-tool-pi1 div.odd    { background-color: #FFFFFF; }
+.tx-tool-pi1 hr.clear   { display: block; clear: both; border: 0; margin: 0; }
+.tx-tool-pi1 div.kursid { display: none; }
+.tx-tool-pi1 .disabled  { pointer-events: none; color: #999999; }
 
-ul.typo3-messages li {
-  list-style: none;
-}
+.tx-tool-pi1 div {width:100%;}
 
-h4.alert-title {
-  font-family: unset;
-  font-size: large;
-}
-
-img.fa-info-circle {
-  width: 1em;
-  height: 1em;
-}
-
-.tx-tool-pi1 div.row {
-  margin-right: 0;
-  margin-left: 0;
-}
-
-.tx-tool-pi1 div.even {
-  background-color: #EEEEEE;
-}
-
-.tx-tool-pi1 div.odd {
-  background-color: #FFFFFF;
-}
-
-.tx-tool-pi1 hr.clear {
-  display: block;
-  clear: both;
-  border: 0;
-  margin: 0;
-}
-
-.tx-tool-pi1 div.kursid {
-  display: none;
-}
-
-.tx-tool-pi1 .disabled {
-  pointer-events: none;
-  color: #999999;
-}
-
-.tx-tool-pi1 div.col {
+.tx-tool-pi1 div.col    {
   width: 25px;
   height: auto;
   min-height: 18px;
   padding: 4px;
-  flex: auto;
+  flex:auto;
   @include media-breakpoint-up(lg) {
     display: flex;
-    flex: 1 0 0%;
+    flex-wrap: wrap;
+    flex: unset;
   }
 }
 
 .tx-tool-pi1 div.head {
   display: none;
-
   @include media-breakpoint-up(lg) {
     font-weight: bold;
-    background: none !important;
-    color: $primary !important;
+    background:none!important;
+    color: $primary!important;
     border-bottom: 1px solid $primary;
     display: block;
-    font-size: 90%;
+    font-size:90%;
     font-weight: normal;
     display: flex;
     flex-wrap: wrap;
   }
 }
 
-.tx-tool-pi1 div.head div.col:last-of-type {
-  width: 100%;
-  @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: calc(2 + 3);
-  }
-}
-
-.tx-tool-pi1 div.ampel {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  display: inline;
-}
-
+.tx-tool-pi1 div.ampel {text-overflow: ellipsis; overflow: hidden; white-space: nowrap; display:inline;}
 .tx-tool-pi1 span.ampel {
   width: 0.75em;
   height: 0.75em;
@@ -101,85 +53,109 @@ img.fa-info-circle {
   display: inline-block;
   vertical-align: middle;
 }
+.tx-tool-pi1 span.ampel-green  {background-color: #00ff00;}
+.tx-tool-pi1 span.ampel-yellow {background-color: #ffff00;}
+.tx-tool-pi1 span.ampel-red    {background-color: #ff0000;}
 
-.tx-tool-pi1 span.ampel-green {
-  background-color: #00ff00;
-}
-
-.tx-tool-pi1 span.ampel-yellow {
-  background-color: #ffff00;
-}
-
-.tx-tool-pi1 span.ampel-red {
-  background-color: #ff0000;
-}
-
-.tx-tool-pi1 div.ampel {
-  width: 6%;
+.tx-tool-pi1 div.kursnummer	{
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 0.3;
+    width:40px;
+  }
+}
+
+.tx-tool-pi1 div.ampel	{
+  width:6%;
+  @include media-breakpoint-up(lg) {
+    width:25px;
   }
 }
 
 .tx-tool-pi1 div.bezeichnung {
-  width: 94%;
+  width:94%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 9;
+    width:170px;
+    flex-grow: 1;
   }
 }
 
 .tx-tool-pi1 div.wochentag {
-  width: 100%;
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 2.5;
+    width:120px;
   }
 }
 
 .tx-tool-pi1 .col.beginndatum {
-  width: 100%;
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 2.5;
+    width:120px;
   }
 }
 
 .tx-tool-pi1 div.vonzeit,
-.tx-tool-pi1 div.biszeit {
-  width: 100%;
+.tx-tool-pi1 div.biszeit  {
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 1.5;
+    width:70px;
   }
 }
 
 .tx-tool-pi1 div.anzahleinheiten {
-  width: 100%;
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 2;
+    width:150px;
   }
 }
 
-.tx-tool-pi1 div.zahlbetrag {
-  width: 100%;
+.tx-tool-pi1 div.raeumlichkeit {
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 2;
+    width:150px;
   }
 }
 
-.tx-tool-pi1 div.anmeldung {
-  width: 100%;
+.tx-tool-pi1 div.tanzlehrer {
+  width:100%;
   @include media-breakpoint-up(lg) {
-    width: auto;
-    flex-grow: 3;
+    width:150px;
+  }
+}
+
+.tx-tool-pi1 div.zahlbetrag  {
+  width:100%;
+  @include media-breakpoint-up(lg) {
+    width:80px;
+  }
+}
+
+.tx-tool-pi1 div.anmeldung   {
+  width:100%;
+  @include media-breakpoint-up(lg) {
+    width:180px;
+  }
+}
+
+.tx-tool-pi1 div.anmeldung a {
+  width: 300px;
+  background:$primary;
+  color:#fff;
+  text-align: center;
+  border-radius: 5px;
+  @include media-breakpoint-up(lg) {
+    width: 95%;
   }
 }
 
 /* Spaltentitel Mobilansicht */
+.tx-tool-pi1 div.kursnummer::before {
+  content: "Kurs Nr.: ";
+  font-weight: bold;
+  margin-right: 5px;
+  @include media-breakpoint-up(lg) {
+    content: none;
+  }
+}
 
 .tx-tool-pi1 div.standort::before {
   content: "Standort: ";
@@ -225,7 +201,6 @@ img.fa-info-circle {
     content: none;
   }
 }
-
 .tx-tool-pi1 div.vonzeit::before {
   content: "Uhrzeit: ";
   font-weight: bold;
@@ -298,33 +273,24 @@ img.fa-info-circle {
   }
 }
 
-.tx-tool-pi1 div.no_content {
-  width: 100%;
-  clear: both;
+.tx-tool-pi1 div.raeumlichkeit::before {
+  content: "Räumlichkeit: ";
+  font-weight: bold;
+  margin-right: 5px;
+  @include media-breakpoint-up(lg) {
+    content: none;
+  }
 }
 
+.tx-tool-pi1 div.no_content   { width: 100%; clear:both; }
+.tx-tool-pi1 div.anmeldung a  { display: block; }
+.tx-tool-pi1 div.anmeldung a:hover { background-color: #DDDDDD; }
 .tx-tool-pi1 span.anmTxt,
-.tx-tool-pi1 span.noanmeldung {
-  font-size: 80%;
-  line-height: 100%;
-}
-
-.tx-tool-pi1 span.noanmeldung {
-  margin: 4px 0 2px 2px;
-}
-
-.tx-tool-pi1 div.zsText {
-  margin: 1em 0;
-}
-
-.tx-tool-pi1 .more {
-  cursor: pointer;
-}
-
-.tx-tool-pi1 th.col-ampel {
-  color: transparent;
-}
-
+.tx-tool-pi1 span.noanmeldung { font-size: 75%; line-height: 110%; padding-top: 2px; }
+.tx-tool-pi1 span.noanmeldung { margin: 4px 0 2px 2px; }
+.tx-tool-pi1 div.zsText       { margin: 1em 0; }
+.tx-tool-pi1 .more            { cursor: pointer; }
+.tx-tool-pi1 th.col-ampel     { color: transparent; }
 .tx-tool-pi1 .tanzlehrerPopUp, .tx-tool-pi1 .kursTerminBox {
   position: absolute;
   padding: 20px;
@@ -333,11 +299,9 @@ img.fa-info-circle {
   background-color: white;
   z-index: 9;
 }
-
 .section.section-default:last-child div.frame:last-child div.tx-tool-pi1 div.kursTerminBox {
   position: static;
 }
-
 .tx-tool-pi1 .tanzlehrerClose, .tx-tool-pi1 .kursTerminClose {
   float: right;
   margin-left: 1em;
@@ -348,37 +312,42 @@ img.fa-info-circle {
   height: 20px;
   padding: -20px;
   z-index: 2;
-  background-image: url(../../Icons/Tool/close.png);
+  background-image: url(../Icons/icon_tx_tool_pi1_close.png);
   background-repeat: no-repeat;
 }
+.tx-tool-pi1 .text-muted { color: #999; }
+.tx-tool-pi1 div.modal-header { background-color: lightgray; }
 
-img.pi1-icon-info {
-  width: 1.2rem;
-  height: 1.2rem;
-}
-
-.tx-tool-pi1 .text-muted {
-  color: #999;
-}
-
-.tx-tool-pi1 div.modal-header {
-  background-color: lightgray;
+.tx-tool-pi1 div.anmeldung a {
+  padding: 0 6px;
 }
 
 .tx-tool-pi1 div.anmeldung a {
-  width: 300px;
-  display: block;
+  background:$primary;
   color: #fff;
-  background: $primary;
+  border-radius: 4px;
   text-align: center;
-  border-radius: 5px;
-  padding: 0 6px;
+}
+
+.tx-tool-pi1 div.anmeldung a:hover {text-decoration:none;}
+
+/* Anmeldung */
+.tx-tool-pi2 legend {color:$primary;}
+.tx-tool-pi2 h2:hover { background: $primary;}
+
+/* Copy-Button */
+.tx-tool-pi2 .copyButton {
+  border-color: #c2c0be;
+  color: #c02727;
+  width: 100%;
   @include media-breakpoint-up(lg) {
-    width: 95%;
+    position: absolute;
+    left: 650px;
+    width: auto !important;
   }
 }
 
-.tx-tool-pi1 div.anmeldung a:hover {
-  background-color: #5f5f5f;
-  text-decoration: none;
+.tx-tool-pi2 legend {
+  float: unset;
 }
+
