--- a/Resources/Private/Partials/Calendarize/Date/Static.html
+++ b/Resources/Private/Partials/Calendarize/Date/Static.html
@@ -1,10 +1,4 @@
 {index.startDate -> f:format.date(format: '{f:translate(key: \'dateFormat\')}')}
-<f:if condition="{index.allDay}">
-	<f:then></f:then>
-	<f:else>
-		<div class="time"><span class="glyphicon glyphicon-time"></span><f:format.date format="{f:translate(key: 'timeFormat')}">{index.startDateComplete}</f:format.date>
-	</f:else>
-</f:if>
 
 <f:if condition="{index.startDate -> f:format.date(format: 'd.m.Y')} == {index.endDate -> f:format.date(format: 'd.m.Y')}">
 	<f:then></f:then>
@@ -14,6 +8,12 @@
 </f:if>
 
 <f:if condition="{index.allDay}">
+	<f:then></f:then>
+	<f:else>
+		<div class="time"><span class="glyphicon glyphicon-time"></span><f:format.date format="{f:translate(key: 'timeFormat')}">{index.startDateComplete}</f:format.date>
+	</f:else>
+</f:if>
+<f:if condition="{index.allDay}">
 	<f:then>
 		<f:translate key="all_day" />
 	</f:then>
@@ -21,9 +21,9 @@
 		<f:if condition="{index.openEndTime}">
 			<f:then>
 				<f:if condition="{index.startDate -> f:format.date(format: 'd.m.Y')} == {index.endDate -> f:format.date(format: 'd.m.Y')}">
-				   <span class="open_end">- </span>
+					-
 				</f:if>
-				<span class="openend"><f:translate key="open_end" /></span>
+				<f:translate key="open_end" />
 			</f:then>
 			<f:else>
 				<!--<f:if condition="{index.startDate -> f:format.date(format: 'd.m.Y')} == {index.endDate -> f:format.date(format: 'd.m.Y')}">
