--- a/Resources/Public/Scss/Theme/global.scss
+++ b/Resources/Public/Scss/Theme/global.scss
@@ -6,8 +6,8 @@
 
 /* Navigation*/
 .navbar-mainnavigation .navbar-brand-image {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .navbar-mainnavigation .navbar-brand {
@@ -285,12 +285,12 @@ h3.carousel-item-header,
 }
 
 .layout-4 .section.section-default .frame {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .layout-4 .frame-collapsible, .frame-background-none.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage) + .frame-background-none.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage), .frame-background-primary.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage) + .frame-background-primary.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage), .frame-background-secondary.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage) + .frame-background-secondary.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage), .frame-background-light.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage) + .frame-background-light.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage), .frame-background-dark.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage) + .frame-background-dark.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage) {
-  margin-top: 0rem;
+  margin-top: 0;
 }
 
 /* Galerie ( Layout Galerie)*/
@@ -320,18 +320,18 @@ h3.carousel-item-header,
   border: 1px solid #ccc;
   background: #fff;
   margin-bottom: 30px;
-  -webkit-box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   position: relative;
   width: 100%;
   float:left;
-  margin-left: 0px;
+  margin-left: 0;
   text-shadow: none;
 }
 
 .row.news-list-item .news-text {
-  padding: 0px;
+  padding: 0;
   width: 75%;
 }
 
@@ -441,7 +441,7 @@ h3.carousel-item-header,
 
 .news-backlink-wrap { clear:both; float:left; }
 
-.news-single .news-img-wrap .outer { width:100%; margin: 0%;}
+.news-single .news-img-wrap .outer { width:100%; margin: 0;}
 
 
 /* News Layout 1*/
@@ -452,12 +452,12 @@ h3.carousel-item-header,
   padding:0;
   border: 1px solid #ccc;
   background: #fff;
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: 0;
+  margin-left: 0;
   margin-bottom: 40px;
-  -webkit-box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   position: relative;
   @include media-breakpoint-up(md) {
     float:left;
@@ -465,7 +465,7 @@ h3.carousel-item-header,
     margin-right: 1%;
     margin-left: 1%;
     height: 430px;
-    padding: 0px;
+    padding: 0;
   }
 }
 
@@ -503,7 +503,7 @@ h3.carousel-item-header,
   max-width: 100%;
   width:100%;
   clear: both;
-  padding: 0px;
+  padding: 0;
   height:180px;
   overflow:hidden;
 }
@@ -527,7 +527,6 @@ h3.carousel-item-header,
 .frame-newslayout1 .row.news-list-item img,
 .frame-newslayout2 .row.news-list-item img,
 .frame-newslayout3 .row.news-list-item img {
-  width: 100%;
   width: 100% !important;
   margin: 0 auto;
   object-fit: cover;
@@ -563,7 +562,7 @@ h3.carousel-item-header,
 
 .frame-newslayout1 .row.news-list-item .btn-primary {
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   border-radius: 2px;
 }
 
@@ -587,14 +586,13 @@ h3.carousel-item-header,
   text-align: left;
   position: relative;
   bottom: 0;
-  margin: 0px;
+  margin: 0;
   padding: 20px;
   color:#333;
   float:left;
   text-transform:uppercase;
   box-shadow: none;
   @include media-breakpoint-up(lg) {
-    bottom: 20px;
     bottom: 40px;
   }
 }
@@ -620,12 +618,12 @@ h3.carousel-item-header,
   padding-top: 20px;
   border: 1px solid #ccc;
   background: #fff;
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: 0;
+  margin-left: 0;
   margin-bottom: 40px;
-  -webkit-box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   position: relative;
   @include media-breakpoint-up(md) {
     float:left;
@@ -633,11 +631,10 @@ h3.carousel-item-header,
     margin-right: 1%;
     margin-left: 1%;
     height: 370px;
-    padding: 0px;
+    padding: 0;
     overflow: hidden;
   }
 }
-
 
 .frame-newslayout3 .row.news-list-item .news-text {
   width:100%;
@@ -660,7 +657,7 @@ h3.carousel-item-header,
 .frame-newslayout3 .row.news-list-item:active .news-text,
 .frame-newslayout3 .row.news-list-item:focus .news-text {
   -moz-user-select: none;
-  top: 0px;
+  top: 0;
 }
 
 .frame-newslayout3 .row.news-list-item .news-image {
@@ -753,12 +750,8 @@ h3.carousel-item-header,
   margin: 10px 0;
   background:#fff;
   @include media-breakpoint-up(lg) {
-    padding:0 20px 20px 0;
-    width: 48%;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
-    border: 1px solid #eaeaea;
     width: 100%;
-    margin: 0;
     height:355px;
     position: relative;
     border: 1px solid #eaeaea;
@@ -811,12 +804,12 @@ h3.carousel-item-header,
 .frame-kalenderkasten1 .calendarize .panel-default:active .media-body,
 .frame-kalenderkasten1 .calendarize .panel-default:focus .media-body {
   -moz-user-select: none;
-  top: 0px;
+  top: 0;
 }
 
 .frame-kalenderkasten1 .calendarize-item {
   width: 25%;
-  padding: 0px;
+  padding: 0;
   @include media-breakpoint-up(lg) {
     transition: top 1s ease 0s;
     width: 100%;
@@ -828,13 +821,13 @@ h3.carousel-item-header,
   height: auto;
   transition: top 1s ease 0s;
   width: 100%;
-  padding-top:0px;
-  padding-left:0px;
+  padding-top:0;
+  padding-left:0;
   @include media-breakpoint-up(lg) {
     width:100%;
     height:auto;
     transition: top 1s ease 0s;
-    padding-left:0px;
+    padding-left:0;
   }
 }
 .frame-kalenderkasten1 .calendarize .time,
@@ -855,7 +848,7 @@ h3.carousel-item-header,
 
 .frame-kalenderkasten2 .calendarize .panel-default {
   padding: 10px;
-  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
   border: 1px solid #ccc;
   background: #fff;
   width:100%;
@@ -870,7 +863,7 @@ h3.carousel-item-header,
   @include media-breakpoint-up(lg) {
     height: 590px;
     width: 31.2%;
-    padding: 0px;
+    padding: 0;
     display:table;
     margin-bottom: 20px;
   }
@@ -904,7 +897,6 @@ h3.carousel-item-header,
 }
 
 .frame-kalenderkasten2 .calendarize-item img {
-  width: 100%;
   width: 100% !important;
   margin: 0 auto;
   object-fit: cover;
@@ -925,14 +917,14 @@ h3.carousel-item-header,
 .frame-kalenderkasten2 .calendarize-button {float:left;}
 
 .frame-kalenderkasten2 .calendarize-button .glyphicon {
-  width: 0px;
+  width: 0;
 }
 
 .frame-kalenderkasten2 .calendarize-button .btn-outline-primary {
   background:none;
   position: relative;
   bottom: auto;
-  margin: 0px;
+  margin: 0;
   padding:0;
   color:#333;
   border:0;
@@ -971,7 +963,7 @@ h3.carousel-item-header,
   font-size:1.4em;
   margin-bottom:8px;
   padding: 3px;
-  text-transform:normal;
+  text-transform: none;
   @include media-breakpoint-up(lg) {
     font-size:1.8em;
   }
@@ -1037,48 +1029,17 @@ h3.carousel-item-header,
   transition: background-color .3s;
 }
 
+/* Tanzpartnersuche*/
+.tx-tanzpartner .card-link {background: $primary;}
+
 /* Akkordion*/
 .accordion-button {color:$primary; background-color: rgba(0,0,0,0.03);}
-
-/* Tanzpartnersuche */
-.tx_tanzpartner .f3-widget-paginator li {
-  float: left;
-  width: 70px;
-  height: 40px;
-  margin-right: 10px;
-  border: 2px solid $primary;
-  list-style: none;
-  text-align: center;
-  padding-top: 0;
-}
-
-.tx_tanzpartner .f3-widget-paginator a {
-  text-decoration: none;
-  transition: background-color 0.3s;
-  display: block;
-  height: 100%;
-  padding: 5px;
-  float: none;
-}
-
-.tx-tanzpartner .f3-widget-paginator .current a {color:#fff;}
-.tx-tanzpartner .f3-widget-paginator .current a:hover {background:none;}
-
-.tx_tanzpartner .card-header {padding: 15px; border-radius: 0; margin-bottom: 20px;}
-.tx_tanzpartner .card-title {margin-bottom: 0;}
-.tx_tanzpartner h3.card-title {padding:0;}
-.tx_tanzpartner .card-link.float-right {float:right;}
-.tx-tanzpartner .checkbox {padding: 5px 0 25px 0;}
-.tx-tanzpartner .help-block {background-color: #E8C5B7;}
-.tx-tanzpartner .card-footer {padding: 10px; margin-top: 20px; border: 1px solid rgba(0,0,0,0.125);}
-
-.tx_tanzpartner ul.f3-widget-paginator {padding: 10px 0 20px 0; height:auto!important;}
 
 /* Rahmen */
 
 /* Rahmen Zielgruppe Startseite */
 .frame.frame-zielgruppenstart .frame-container {
-  margin-top: 0px;
+  margin-top: 0;
   background: #fff;
   z-index: 999;
   position: relative;
@@ -1088,10 +1049,9 @@ h3.carousel-item-header,
   }
 }
 
-
 /* Rahmen Infokasten Startseite */
 .frame.frame-infokastenstart .frame-container {
-  margin-top: 0px;
+  margin-top: 0;
   background: $primary;
   z-index: 999;
   position: relative;
@@ -1144,7 +1104,6 @@ h3.carousel-item-header,
 /* Rahmen Zielseiten Section */
 .frame-zielseitensection ul {
   list-style-type: none;
-  padding: 0px;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(.05, #f9f9f9), color-stop(1, #e9e9e9));
   background: -moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
   background: -webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
@@ -1210,10 +1169,7 @@ h3.carousel-item-header,
   word-wrap: break-word;
   background-color:#f7f7f7;
   background-clip: border-box;
-  border: 1px solidrgba(0, 0, 0, 0.125);
-  border-color: rgba(0, 0, 0, 0.125);
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid rgba(0, 0, 0, 0.125);
   float: left;
   padding: 10px 25px 10px 10px!important;
   margin: 5px;
@@ -1375,8 +1331,8 @@ h3.carousel-item-header,
 /* Rahmen Ueberlappen */
 .frame-rahmen_ueberlappen {
   margin-top: -150px;
-  margin-bottom: 0px;
-  padding: 0px 0px 90px 0px;
+  margin-bottom: 0;
+  padding: 0 0 90px 0;
   @include media-breakpoint-up(md) {
     margin-top: -200px;
   }
@@ -1399,13 +1355,13 @@ h3.carousel-item-header,
 
 .frame-rahmen_streifen .frame-container {
   max-width: 100%;
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .frame-rahmen_streifen .gallery-item {
-  padding-left: 0rem;
-  padding-right: 0rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .frame-rahmen_streifen .gallery-item img,
@@ -1449,7 +1405,6 @@ h3.carousel-item-header,
   color: #fff!important;
   font-size: 1.1em;
   text-shadow: 0 0 4px #000;
-  text-align: center;
   border: 2px solid #fff;
   text-align:center;
   height: 80px;
@@ -1712,7 +1667,6 @@ h3.carousel-item-header,
   bottom: 0;
   left: 0;
   animation: fadeInLeft 1s both;
-  animation-delay: 0s;
   animation-delay: 0.4s;
   background:$primary;
   opacity: 0.9!important;
@@ -1726,8 +1680,8 @@ h3.carousel-item-header,
 
 .frame-sliderkasten .frame-container {
   max-width: 100%;
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .frame-sliderkasten .text-center {
@@ -1742,14 +1696,14 @@ h3.carousel-item-header,
 
 /* Carousel Text von Links */
 .frame.frame-slidertextlinks {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .frame-slidertextlinks .frame-container {
   max-width: 100%;
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .frame-slidertextlinks .carousel-item .valign {
@@ -1766,12 +1720,12 @@ h3.carousel-item-header,
 
 /* Image-Box*/
 .box .textpic-gallery {
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
 .box .textpic.textpic-above .textpic-item {
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .box .textpic.textpic-above {
@@ -1785,11 +1739,10 @@ h3.carousel-item-header,
 
 .box .textpic.textpic-above .frame-backgroundimage-container {
   border: 0;
-  margin-top: 1.25rem;
   word-wrap: break-word;
   background-clip: border-box;
   position:relative;
-  margin: 0px;
+  margin: 0;
   padding:0;
   height:260px;
 }
@@ -1854,8 +1807,8 @@ h3.carousel-item-header,
 }
 
 .box {
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 /* Box eckig */
@@ -1873,19 +1826,19 @@ h3.carousel-item-header,
 
 /* Rahmen anpassen */
 .frame-zielgruppenstart_box .row {
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .frame-zielgruppenstart_box .col-md-6 {
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .frame.frame-zielgruppenstart_box .frame-container {
   max-width:100%;
   width:100%;
-  padding: 0px 0px;
+  padding: 0 0;
   @include media-breakpoint-up(md) {
     margin-top: -50px;
     z-index: 99999;
@@ -1893,18 +1846,18 @@ h3.carousel-item-header,
 }
 
 .frame.frame-zielgruppenstart_box {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .frame.frame-zielgruppenstart_box .frame-container {
-  margin-top: 0px;
+  margin-top: 0;
   z-index:2;
 }
 
 .frame-zielgruppenstart_box .frame {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 /* Box anpassen */
@@ -1934,7 +1887,7 @@ h3.carousel-item-header,
   bottom:10px;
   left:10px;
   position: absolute;
-  padding:0px 0 0 0;
+  padding:0 0 0 0;
 }
 
 .box.start .frame-header {
@@ -1949,7 +1902,7 @@ h3.carousel-item-header,
   font-weight: 400;
   color: #fff;
   text-shadow: 0 0 5px #000;
-  padding: 0 0 0 0px;
+  padding: 0 0 0 0;
   margin-bottom:0!important;
 }
 
@@ -1976,8 +1929,8 @@ h3.carousel-item-header,
   }
 }
 
-.box.start h5 {margin-bottom: 0rem!important;}
-.box.start h5 a {display:block; margin-bottom: 0rem!important;}
+.box.start h5 {margin-bottom: 0!important;}
+.box.start h5 a {display:block; margin-bottom: 0!important;}
 
 /* Box Hintergrundbild */
 .box.start {	height:90px; overflow:hidden; }
@@ -2079,7 +2032,7 @@ fieldset  {
 
 .tx-powermail .powermail_create .table-responsive {
   color: #000;
-  padding: 0px;
+  padding: 0;
   border: none;
   font-size: 1.1rem;
 }
@@ -2381,7 +2334,7 @@ fieldset  {
   animation-name: bounceIn;
 }
 
-textarea {
+.textarea {
   width: 100%;
 }
 
